Added the footer

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   
   
   
-  <link rel='stylesheet' href='bbd9ce138310201cc041867cfd7a7a0d.css'>
+  <link rel='stylesheet' href='70fc2e52120ce7caecb3a82b8a8b10e5.css'>
   
   <title>Designer Chat</title>
   
@@ -38,6 +38,10 @@
 
     <!--End mc_embed_signup-->
   </section>
+
+  <footer class="page-footer">
+      Made by <a href="http://www.fabrica.io">www.fabrica.io</a>
+  </footer>
   
 	<script type="text/javascript" src="//use.typekit.net/mjz5nbu.js"></script>
 	<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
