--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </section>
 
   <footer>
-
+      <span>Made by <a href="http://www.fabrica.io/">Giancarlo Rispo</a> and <a href="http://ingledow.co.uk/">David Ingledow</a></span>
   </footer>
 
 
