--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel='stylesheet' href='assets/css/style.css'>
+  <link rel='stylesheet' href='assets/css/min-style.css'>
 
   <title>Designer Chat</title>
 
@@ -32,16 +32,10 @@
             </div>
         </form>
     </div>
-
     <!--End mc_embed_signup-->
   </section>
-
   <footer>
       <span>Made by <a href="http://www.fabrica.io/">Giancarlo Rispo</a> and <a href="http://ingledow.co.uk/">David Ingledow</a></span>
   </footer>
-
-
-
 </body>
-
 </html>
