--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
 <body>
 
   <section class="page-container">
-    <h1>Join the awesome Designer News community chat room!</h1>
+    <h1>The Designer News community in a private Slack chat.</h1>
     <p>Get your invitation now</p>
 
     <!-- Begin MailChimp Signup Form -->
     <div id="mc_embed_signup" class="mailchimp-form">
         <form action="http://designerchat.us8.list-manage1.com/subscribe/post?u=3e2fb6609691b486eea3ab1f1&amp;id=c01360baa7" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-	    	<input type="email" value="" name="EMAIL" class="required email" placeholder="Your email here..." id="mce-EMAIL">
-            <input type="submit" value="Sign Up" name="subscribe" id="mc-embedded-subscribe" class="button">
+	    	<input type="email" value="" name="EMAIL" class="required email" placeholder="Your email address here..." id="mce-EMAIL">
+            <input type="submit" value="Join" name="subscribe" id="mc-embedded-subscribe" class="button">
             <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
             <div style="position: absolute; left: -5000px;">
                 <input type="text" name="b_3e2fb6609691b486eea3ab1f1_c01360baa7" value="">
@@ -35,7 +35,7 @@
     <!--End mc_embed_signup-->
   </section>
   <footer>
-      <span>Made by <a href="http://www.fabrica.io/">Gianluca Rispo</a> and <a href="http://ingledow.co.uk/">David Ingledow</a></span>
+      <span>Made by <a href="https://dribbble.com/Gianluca">Gianluca Rispo</a> and <a href="http://david.ingledow.co.uk/">David Ingledow</a></span>
   </footer>
 </body>
 </html>
