--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
     <script type="text/javascript" src="//use.typekit.net/zme6ctg.js"></script>
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-37251060-2', 'designerchat.co');
+        ga('send', 'pageview');
+
+    </script>
+
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
